--- a/GODSEND-Agenda/sheet.html
+++ b/GODSEND-Agenda/sheet.html
@@ -1,19 +1,18 @@
 
 <!-- main sheet code-->
-<input class="gamesys" type="hidden" name="attr_gametype" value=""/>
+<input class="gamesys" type="hidden" name="attr_gametype"/>
 <div class="tab-buttons spaced center">
-  <input class="tabstoggle" type="hidden" name="attr_sheetTab" value="character"/>
   <input class="gametoggle" type="hidden" name="attr_gametype" value="godsend"/>
   <h1 class="godsend" title="GODSEND Agenda"></h1>
   <h1 class="talislanta" title="Talislanta"></h1>
   <h1 class="hellas" title="Hellas"></h1>
   <h1 class="atlantis" title="Atlantis Second Age"></h1>
   <div><span>Page selection</span>
-    <select name="attr_sheetTab">
-      <option value="character">character</option>
-      <option value="notes">notes</option>
-      <option value="settings">settings</option>
-    </select>
+    <input class="npctoggle" type="hidden" name="attr_npc" value="0"/>
+    <button class="pc" type="action" name="act_character">Character</button>
+    <button class="pc" type="action" name="act_background">Background</button>
+    <button class="npc" type="action" name="act_npc">NPC</button>
+    <button type="action" name="act_settings">Settings</button>
   </div>
   <div class="version"><span>Sheet Version: </span><span name="attr_version"></span></div>
 </div>
@@ -337,47 +336,42 @@ const int = score => parseInt(score, 10) || 0;
 
 // tabs
 
-const buttonlist = ["character", "notes", "settings"];
-
+const buttonlist = ["character","background","npc","settings"];
 buttonlist.forEach(button => {
     on(`clicked:${button}`, function() {
-      console.log(button + " was pressed");
-      setAttrs({
-          sheetTab: button
-      });
+        setAttrs({
+            sheetTab: button
+        });
     });
 });
 
+on("sheet:opened", function() {
 
-// game system
+  getAttrs(["npc", "sheetTab"], values => {
 
-/*
-on("change:gametype", function(game) {
+    let npc = int(values["npc"]);
+    let sheetTab = values["sheetTab"];
+    console.log("sheetTab: ", sheetTab);
+    //let page = "character";
 
-  getAttrs("gametype", values => {
-
-    let gametype = values["gametype"];
-    console.log("Game System set to: " + gametype);
-
-    let gamedice = "2d10cf0cs0";
-
-    if (gametype === "godsend"){
-      gamedice = "2d10cf0cs0";
+    if (sheetTab === "character"){
+      npc = 0;
+      console.log("sheetTab was char, set NPC=0: ", npc);
     }
-    else if (gametype === "hellas") {
-      gamedice = "1d20";
+    else if (sheetTab === "npc"){
+      npc = 1;
+      console.log("sheetTab was npc, set NPC=1: ", npc);
     }
-    else if (gametype === "atlantis") {
-      gamedice = "1d20";
+    else if (sheetTab === "background"){
+      console.log("sheetTab was note");
     }
-    else if (gametype === "talislanta") {
-      gamedice = "1d20";
+    else if (sheetTab === "settings"){
+      console.log("sheetTab was settings");
     }
     setAttrs({
-        dice: gamedice
+        npc: npc
     });
   });
-}); */
-
+});
 
 </script>
